update logo && theme control

--- a/src/renderer/scss/_mixins.scss
+++ b/src/renderer/scss/_mixins.scss
@@ -3,7 +3,7 @@
 @mixin direction-button-default {
     height: 27px;
     width: 27px;
-    border: 1px solid #A20F08;
+    border: 1px solid rgba(83, 53, 53, 0.3);
     background: inherit;
     color: white;
 }
