--- a/src/renderer/scss/_topbar.scss
+++ b/src/renderer/scss/_topbar.scss
@@ -6,7 +6,7 @@
     -webkit-app-region: drag;
 }
 
-.ncme-top-bar .platfrom-osx-top-bar {
+.ncme-top-bar .platfrom-darwin-top-bar {
     padding-top: 14px;
     padding-bottom: 3px;
 }
